# huetils

./: README.md  hue.py  setup.cfg
huetils/: room_control.py  thermometer.py  utils.py
