[metadata]
name = huetils
# Format is YYYY.MM.DD (https://calver.org/)
version = 0.1
description = Some hue scripts I use for my home.
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/JulienPalard/huetils
license = MIT License

[options]
packages = find:
python_requires = >= 3.7
install_requires =
  phue
  requests
  astral
  tabulate

[options.entry_points]
console_scripts =
  hue-thermometer=huetils.thermometer:main
  hue-room-control=huetils.room_control:main
